--- a/composer.json
+++ b/composer.json
@@ -6,10 +6,10 @@
     "type": "project",
     "require": {
         "php": ">=5.6.4",
-        "barryvdh/laravel-dompdf": "~0.8.0",
+        "barryvdh/laravel-dompdf": "^0.8.1",
         "intervention/image": "^2.4",
         "laravel/framework": "5.4.*",
-        "laravel/tinker": "~1.0",
+        "laravel/tinker": "~1.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
